# ytrec-probe

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  run.sh
experiment/: test.sh  test.sh~
experiment/output/: channels.csv  raw.json  report.html
output/: channels.csv  raw.json  report.html
tests/: test_analysis.py  test_channel_urls.py  test_collector.py
ytrec_probe/: __init__.py  analysis.py  cli.py  collector.py  models.py  report.py
