[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ytrec-probe"
version = "0.3.2"
description = "Browserless local probe for channels appearing in YouTube watch-next recommendations without the official Data API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx[http2]>=0.27,<1",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<10",
]

[project.scripts]
ytrec-probe = "ytrec_probe.cli:main"

[tool.setuptools]
packages = ["ytrec_probe"]
